--- a/public/css/editable.css
+++ b/public/css/editable.css
@@ -9,6 +9,10 @@
   margin-bottom: 8px;
   border: 1px solid #c8c8c8;
   padding: 6px 12px 7px 12px;
+
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
 }
 
 .editable:hover {
