--- a/public/css/editable.css
+++ b/public/css/editable.css
@@ -24,3 +24,182 @@
 .editable:focus {
   border-color: #0078d7;
 }
+
+.ms-ListItem {
+  color: #333333;
+  font-family: 'Segoe UI Regular WestEuropean', 'Segoe UI', Tahoma, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-shadow: none;
+  *zoom: 1;
+  padding: 9px 28px 3px;
+  position: relative;
+  display: block;
+}
+
+.ms-ListItem:before,
+.ms-ListItem:after {
+  display: table;
+  content: '';
+  line-height: 0;
+}
+
+.ms-ListItem:after {
+  clear: both;
+}
+
+.ms-ListItem-primaryText,
+.ms-ListItem-secondaryText,
+.ms-ListItem-tertiaryText {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  display: block;
+}
+
+.ms-ListItem-primaryText {
+  color: #212121;
+  font-family: 'Segoe UI Semilight WestEuropean', 'Segoe UI Semilight', 'Segoe UI', Tahoma, Arial, sans-serif;
+  font-size: 21px;
+  padding-right: 80px;
+  position: relative;
+  top: -4px;
+}
+
+.ms-ListItem-secondaryText {
+  color: #333333;
+  font-family: 'Segoe UI Regular WestEuropean', 'Segoe UI', Tahoma, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 25px;
+  position: relative;
+  top: -7px;
+  padding-right: 30px;
+}
+
+.ms-ListItem-tertiaryText {
+  color: #767676;
+  font-family: 'Segoe UI Semilight WestEuropean', 'Segoe UI Semilight', 'Segoe UI', Tahoma, Arial, sans-serif;
+  font-size: 14px;
+  position: relative;
+  top: -9px;
+  margin-bottom: -4px;
+  padding-right: 30px;
+}
+
+.ms-ListItem-metaText {
+  color: #333333;
+  font-family: 'Segoe UI Semilight WestEuropean', 'Segoe UI Semilight', 'Segoe UI', Tahoma, Arial, sans-serif;
+  font-size: 11px;
+  position: absolute;
+  right: 30px;
+  top: 39px;
+}
+
+.ms-ListItem-selectionTarget {
+  display: none;
+}
+
+.ms-ListItem-actions {
+  max-width: 80px;
+  position: absolute;
+  right: 30px;
+  text-align: right;
+  top: 10px;
+}
+
+.ms-ListItem-action {
+  color: #a6a6a6;
+  display: inline-block;
+  font-size: 15px;
+  position: relative;
+  text-align: center;
+  top: 3px;
+  cursor: pointer;
+  height: 16px;
+  width: 16px;
+}
+
+.ms-ListItem-action .ms-Icon {
+  vertical-align: top;
+}
+
+.ms-ListItem-action:hover {
+  color: #666666;
+  outline: 1px solid transparent;
+}
+
+.ms-ListItem.is-selectable .ms-ListItem-selectionTarget {
+  display: block;
+  height: 20px;
+  left: 6px;
+  position: absolute;
+  top: 13px;
+  width: 20px;
+}
+
+.ms-ListItem:hover {
+  background-color: #eaeaea;
+  cursor: pointer;
+  outline: 1px solid transparent;
+}
+
+.ms-ListItem.is-selectable:hover:before {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-family: 'Office365Icons';
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1;
+  speak: none;
+  position: absolute;
+  top: 12px;
+  left: 6px;
+  height: 15px;
+  width: 15px;
+  border: 1px solid #767676;
+}
+
+.ms-ListItem.ms-ListItem--document {
+  padding: 0;
+}
+
+.ms-ListItem.ms-ListItem--document .ms-ListItem-itemIcon {
+  width: 70px;
+  height: 70px;
+  float: left;
+  text-align: center;
+}
+
+.ms-ListItem.ms-ListItem--document .ms-ListItem-itemIcon .ms-Icon {
+  font-size: 38px;
+  line-height: 70px;
+  color: #666666;
+}
+
+.ms-ListItem.ms-ListItem--document .ms-ListItem-primaryText {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 14px;
+  padding-top: 15px;
+  padding-right: 0;
+  position: static;
+}
+
+.ms-ListItem.ms-ListItem--document .ms-ListItem-secondaryText {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color: #666666;
+  font-family: 'Segoe UI Regular WestEuropean', 'Segoe UI', Tahoma, Arial, sans-serif;
+  font-size: 11px;
+  padding-top: 6px;
+}
+
